change setting actions

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,7 +4,9 @@ jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
-      - name: lint
-        run: |
+      - name: Install dependencies
+        run: 
+          pip install poetry
           make install
-          make lint
+      - name: lint
+        run: make lint
