--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,12 +1,18 @@
 name: Python CI
 on: push
 jobs:
-  my-job:
+  build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: 
+        run: |
           pip install poetry
           make install
       - name: lint
-        run: make lint
+        run: |
+          make lint
